<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#494848"
        android:paddingVertical="20dp"
        android:paddingStart="20dp"
        android:text="@string/my_application"
        android:textColor="#090909"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:ignore="RtlSymmetry,TextContrastCheck">

    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_label">
    </TextView>

    <EditText
        android:id="@+id/login_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="login name"
        android:hint="@string/login_name"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        tools:ignore="VisualLintTextFieldSize">

    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_label">
    </TextView>

    <EditText
        android:id="@+id/password_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="user password"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:minHeight="48dp"
        tools:ignore="VisualLintTextFieldSize,TextContrastCheck">

    </EditText>
</LinearLayout>
