<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">



    <TextView
        android:id="@+id/message_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:padding="5dp"
        android:gravity="end"
        android:layout_marginTop="50dp"
        android:hint="@string/selected_msg_tv"
        />

    <TextView
        android:id="@+id/message_id_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/message_text"
        android:hint="@string/msg_id_tv"
        android:textSize="18sp"
        android:padding="5dp"
        android:gravity="end"
        android:textStyle="bold"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/delete_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/delete_message"
        android:layout_marginTop="16dp"/>

</RelativeLayout>