<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/design_default_color_primary"
    android:gravity="center"
    android:orientation="vertical"
    android:visibility="visible"
    tools:context=".WeatherForecast">

    <TextView
        android:id="@+id/cityName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="25dp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:textSize="48sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city_list"
        android:textSize="26sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textColor="@color/white"/>

    <Spinner
        android:id="@+id/citySpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/spinner_background"
        android:minHeight="48dp"
        android:padding="8dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:popupBackground="@color/white"
        android:dropDownVerticalOffset="4dp"
        android:scrollbars="vertical" />

    <ImageView
        android:id="@+id/image_forecast"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/imgview">
    </ImageView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/current_temperature"
        android:textColor="@android:color/black"
        android:textSize="15dp"
        android:textStyle="bold"
        tools:ignore="SpUsage,TextSizeCheck" />

    <TextView
        android:id="@+id/current_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="0 C"
        android:textColor="@android:color/darker_gray"
        android:textSize="15dp"
        android:textStyle="bold"
        tools:ignore="HardcodedText,SpUsage,TextSizeCheck" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/minimum_temperature"
        android:textColor="@android:color/black"
        android:textSize="15dp"
        android:textStyle="bold"
        tools:ignore="SpUsage,TextSizeCheck" />

    <TextView
        android:id="@+id/min_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="0 C"
        android:textColor="@android:color/darker_gray"
        android:textSize="15dp"
        android:textStyle="bold"
        tools:ignore="HardcodedText,SpUsage,TextSizeCheck" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/maximum_temperature"
        android:textColor="@android:color/black"
        android:textSize="15dp"
        android:textStyle="bold"
        tools:ignore="SpUsage,TextSizeCheck" />

    <TextView
        android:id="@+id/max_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="0 C"
        android:textColor="@android:color/darker_gray"
        android:textSize="15dp"
        android:textStyle="bold"
        tools:ignore="HardcodedText,SpUsage,TextSizeCheck"/>

    <ProgressBar
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="20dp"
        android:visibility="invisible"
        style="?android:attr/progressBarStyleHorizontal"
        android:id="@+id/progress_bar"
        />

</LinearLayout>